force-app/main/default/objects/PDRI__Field_Value_Mapping__c/PDRI__Field_Value_Mapping__c.object-meta.xml
<CustomObject>
    <description>Created for MD-2942.</description>
    <label>Field Value Mapping</label>
    <nameField>
        <displayFormat>FVM-{0000000}</displayFormat>
        <label>Field Value Mapping Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Field Value Mappings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>