force-app/main/default/objects/PDRI__Field_Value_Mapping__c/fields/PDRI__Data_Set_Field__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Data_Set_Field__c</fullName>
    <description>Created for MD-2942</description>
    <label>Data Set Field</label>
    <referenceTo>PDRI__Data_Set_Field__c</referenceTo>
    <relationshipLabel>Field Value Mappings</relationshipLabel>
    <relationshipName>Field_Value_Mappings</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>