force-app/main/default/objects/PDRI__Field_Value_Mapping__c/fields/PDRI__Referenced_Data_Set_Object_Name__c.field-meta.xml
<CustomField>
    <fullName>PDRI__Referenced_Data_Set_Object_Name__c</fullName>
    <formula>PDRI__Referenced_Data_Set_Element__r.PDRI__ObjectName__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Referenced Data Set Object Name</label>
    <type>Text</type>
</CustomField>